Dirty fix to spacing issue at headerbar Spacing between headerbox and viewswitcher

--- a/data/style.css
+++ b/data/style.css
@@ -417,3 +417,7 @@ checkbutton.theme-selector radio:checked {
   background-color: @theme_selected_bg_color;
   color: @theme_selected_fg_color;
 }
+
+#primary-view-switcher {
+  margin-top: -2px;
+}
